task#1740: align json-mapper usage to spring recommendations